Document how to customize OTel semantics (#3686)
* Document how to customize OTel semantics

Supplements the configuration reference entry for this field w/ a more
user-facing breakdown of the choices.

* clarify the default

* Cleanup

---------

Co-authored-by: Gabriel Bianconi <1275491+GabrielBianconi@users.noreply.github.com>

--- a/docs/operations/export-opentelemetry-traces.mdx
+++ b/docs/operations/export-opentelemetry-traces.mdx
@@ -98,3 +98,10 @@ tensorzero-otlp-traces-extra-header-my-second-header: my-second-value
 
 This will attach the headers `my-first-header: my-first-value` and `my-second-header: my-second-value` when exporting any span associated with your TensorZero API request.
 TensorZero API requests _without_ these headers set will be unaffected.
+
+### Export OpenInference traces
+
+By default, TensorZero exports traces with attributes that follow the [OpenTelemetry Generative AI semantic conventions](https://github.com/open-telemetry/semantic-conventions/tree/main/docs/gen-ai).
+
+You can instead choose to export traces with attributes that follow the [OpenInference semantic conventions](https://github.com/Arize-ai/openinference/blob/main/spec/llm_spans.md) by setting `export.otlp.traces.format = "openinference"` in your configuration file.
+See [Configuration Reference](/gateway/configuration-reference/) for more details.
