--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -2480,15 +2480,6 @@ weight = 1.0
 
 <Accordion title='type: "experimental_dynamic_in_context_learning"'>
 
-##### `cutoff`
-
-- **Type:** non-negative float
-- **Required:** no (default: none)
-
-Filters retrieved examples based on their cosine distance from the input embedding.
-Only examples with a cosine distance less than or equal to the specified threshold are included in the prompt.
-
-If all examples are filtered out due to the cutoff threshold, the variant falls back to default chat completion behavior.
 
 ##### `embedding_model`
 
@@ -2713,6 +2704,16 @@ Defines the number of examples to retrieve for the inference.
 k = 10
 # ...
 ```
+
+##### `max_distance`
+
+- **Type:** non-negative float
+- **Required:** no (default: none)
+
+Filters retrieved examples based on their cosine distance from the input embedding.
+Only examples with a cosine distance less than or equal to the specified threshold are included in the prompt.
+
+If all examples are filtered out due to the cutoff threshold, the variant falls back to default chat completion behavior.
 
 ##### `max_tokens`
 
