--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -2713,7 +2713,7 @@ k = 10
 Filters retrieved examples based on their cosine distance from the input embedding.
 Only examples with a cosine distance less than or equal to the specified threshold are included in the prompt.
 
-If all examples are filtered out due to the cutoff threshold, the variant falls back to default chat completion behavior.
+If all examples are filtered out due to this threshold, the variant falls back to default chat completion behavior.
 
 ##### `max_tokens`
 
