edited/deprecated bulk endpoints

--- a/examples/optimization/dicl/dicl.ipynb
+++ b/examples/optimization/dicl/dicl.ipynb
@@ -119,7 +119,7 @@
     "    pprint(datapoints[0])\n",
     "\n",
     "    # Insert the datapoints into the TensorZero dataset\n",
-    "    await t0.bulk_insert_datapoints(dataset_name=\"spam_train\", datapoints=datapoints)\n",
+    "    await t0.insert_datapoints(dataset_name=\"spam_train\", datapoints=datapoints)\n",
     "\n",
     "\n",
     "# Convert the training dataset to TensorZero datapoints and store them in TensorZero\n",
