--- a/docs/gateway/api-reference/datasets-datapoints.mdx
+++ b/docs/gateway/api-reference/datasets-datapoints.mdx
@@ -49,7 +49,7 @@ This endpoint returns the datapoint with the given ID, including all the relevan
 This endpoint adds a list of datapoints to a dataset.
 If the dataset does not exist, it will be created with the given name.
 
-- **Gateway Endpoint:** `POST /datasets/{dataset_name}/datapoints/bulk`
+- **Gateway Endpoint:** `POST /datasets/{dataset_name}/datapoints`
 - **Client Method:** `insert_datapoints`
 - **Parameters:**
   - `dataset_name` (string)
