--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -1552,6 +1552,16 @@ api_key_location = "dynamic::openai_api_key"
 
 </Accordion>
 
+## `[provider_types]`
+
+The `provider_types` section of the configuration allows users to specify global settings that are related to the handling of a
+particular inference provider type (like `"openai"` or `"anthropic"`), such as where to look by default for credentials.
+
+<Accordion title="[provider_types.anthropic]">
+## `provider_types.anthropic.defaults.credential_location`
+
+</Accordion>
+
 ## `[functions.function_name]`
 
 The `[functions.function_name]` section defines the behavior of a function.
