Add DICL cutoff parameter and improve zero-example fallback (#3807)
* feat(dicl): Add cutoff parameter and improve zero-example fallback

Implements a configurable cutoff threshold for filtering DICL examples
based on cosine distance similarity, and enhances zero-example fallback
behavior to properly handle template content blocks and system messages.

## Core Changes

### Cutoff Parameter

- Add optional `cutoff` field to DICL variant configuration
- Accepts float values in range (0, 2] representing cosine distance threshold
- Examples with distance > cutoff are filtered out before inference
- Logs warning with counts when examples are filtered by cutoff
- Supports both normal DICL flow (with examples) and zero-example fallback

Implementation details:
- Added `cutoff: Option<f32>` to `DiclConfig` and `UninitializedDiclConfig`
- Validation ensures cutoff is positive and non-zero
- Filtering occurs after initial k-NN retrieval from database
- Cosine distance range: [0=identical, 2=opposite]

### Zero-Example Fallback Improvements

When DICL retrieves zero examples (or cutoff filters all examples):
- Falls back to vanilla chat completion behavior
- Properly handles template content blocks by stringifying them as JSON
- Always uses variant's `system_instructions` as system message

Implementation:
- Added `prepare_request_message_dicl()` helper function:
  - Checks for template content blocks in messages
  - Stringifies templates as JSON when present
  - Delegates to chat_completion's `prepare_request_message()` for processing
  - Optimized to avoid cloning when no templates are present
- Updated `prepare_request()` to use DICL-specific message preparation
- System message now consistently uses variant's system_instructions

### Template Content Block Handling

DICL does not support templates (unlike chat_completion), so template
content blocks are stringified as JSON in both scenarios:

1. **Normal DICL** (with examples):
   - `lazy_content_to_resolved_discarding_inc

--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -2505,6 +2505,7 @@ weight = 1.0
 
 <Accordion title='type: "experimental_dynamic_in_context_learning"'>
 
+
 ##### `embedding_model`
 
 - **Type:** string
@@ -2726,6 +2727,16 @@ Defines the number of examples to retrieve for the inference.
 k = 10
 # ...
 ```
+
+##### `max_distance`
+
+- **Type:** non-negative float
+- **Required:** no (default: none)
+
+Filters retrieved examples based on their cosine distance from the input embedding.
+Only examples with a cosine distance less than or equal to the specified threshold are included in the prompt.
+
+If all examples are filtered out due to this threshold, the variant falls back to default chat completion behavior.
 
 ##### `max_tokens`
 
