updatd configuration reference with default credentials

--- a/docs/gateway/configuration-reference.mdx
+++ b/docs/gateway/configuration-reference.mdx
@@ -1558,7 +1558,7 @@ The `provider_types` section of the configuration allows users to specify global
 particular inference provider type (like `"openai"` or `"anthropic"`), such as where to look by default for credentials.
 
 <Accordion title="[provider_types.anthropic]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::ANTHROPIC_API_KEY`)
 
@@ -1575,7 +1575,7 @@ api_key_location = "dynamic::anthropic_api_key"
 </Accordion>
 
 <Accordion title="[provider_types.azure]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::AZURE_OPENAI_API_KEY`)
 
@@ -1591,7 +1591,7 @@ api_key_location = "dynamic::azure_openai_api_key"
 </Accordion>
 
 <Accordion title="[provider_types.deepseek]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::DEEPSEEK_API_KEY`)
 
@@ -1607,7 +1607,7 @@ api_key_location = "dynamic::deepseek_api_key"
 </Accordion>
 
 <Accordion title="[provider_types.fireworks]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::FIREWORKS_API_KEY`)
 
@@ -1642,7 +1642,7 @@ credential_location = "dynamic::gcp_credentials_path"
 </Accordion>
 
 <Accordion title="[provider_types.gcp_vertex_gemini]">
-## `batch`
+#### `batch`
 
 - **Type:** object
 - **Required:** no (default: `null`)
@@ -1701,7 +1701,7 @@ credential_location = "dynamic::gcp_credentials_path"
 </Accordion>
 
 <Accordion title="[provider_types.google_ai_studio]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::GOOGLE_AI_STUDIO_API_KEY`)
 
@@ -1717,7 +1717,7 @@ api_key_location = "dynamic::google_ai_studio_api_key"
 </Accordion>
 
 <Accordion title="[provider_types.groq]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::GROQ_API_KEY`)
 
@@ -1732,10 +1732,9 @@ api_key_location = "dynamic::groq_api_key"
 
 </Accordion>
 
-</Accordion>
 
 <Accordion title="[provider_types.hyperbolic]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::HYPERBOLIC_API_KEY`)
 
@@ -1751,7 +1750,7 @@ api_key_location = "dynamic::hyperbolic_api_key"
 </Accordion>
 
 <Accordion title="[provider_types.mistral]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::MISTRAL_API_KEY`)
 
@@ -1767,7 +1766,7 @@ api_key_location = "dynamic::mistral_api_key"
 </Accordion>
 
 <Accordion title="[provider_types.openai]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::OPENAI_API_KEY`)
 
@@ -1783,7 +1782,7 @@ api_key_location = "dynamic::openai_api_key"
 </Accordion>
 
 <Accordion title="[provider_types.openrouter]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::OPENROUTER_API_KEY`)
 
@@ -1799,7 +1798,7 @@ api_key_location = "dynamic::openrouter_api_key"
 </Accordion>
 
 <Accordion title="[provider_types.together]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::TOGETHER_API_KEY`)
 
@@ -1815,7 +1814,7 @@ api_key_location = "dynamic::together_api_key"
 </Accordion>
 
 <Accordion title="[provider_types.xai]">
-## `defaults.api_key_location`
+##### `defaults.api_key_location`
 - **Type:** string
 - **Required:** no (default: `env::XAI_API_KEY`)
 
