added brief doc to credential management

--- a/docs/operations/manage-credentials.mdx
+++ b/docs/operations/manage-credentials.mdx
@@ -144,3 +144,16 @@ with TensorZeroGateway.build_http(gateway_url="http://localhost:3000") as client
 
 print(response)
 ```
+
+### Default credentials for a provider type
+For most providers, we support overriding the default location for a particular provider type.
+This override will be used if the `api_key_location` or `credential_location` is not specified for a particular model provider.
+It will also be used when calling the default function.
+See the [configuration reference](/gateway/configuration-reference) for more details.
+```toml title="tensorzero.toml"
+[provider_types.anthropic.defaults]
+# ...
+api_key_location = "dynamic::anthropic_api_key"
+# api_key_location = "env::ALTERNATE_ANTHROPIC_API_KEY"
+# ...
+```
